--- a/index.html
+++ b/index.html
@@ -6,28 +6,103 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<center>
-<font size = 30>ТИПА КРУТАЯ ГАЗЕТА</font><br><br>
+<h1>ТИПА КРУТАЯ ГАЗЕТА</h1><br><br>
 <div>
-	<image widht="250" height="250" src="image 2.jpg">
+<img src="image2.jpg" alt="Stalin">
 <h1>Типа заголовок</h1>
-	<h3>Не следует, однако забывать, что консультация с широким активом способствует подготовки и реализации дальнейших направлений развития. Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании модели развития. Задача организации, в особенности же начало повседневной работы по формированию позиции позволяет оценить значение систем массового участия. Товарищи! новая модель организационной деятельности позволяет выполнять важные задания по разработке модели развития.
+<h3>Не следует, однако забывать, что консультация с широким активом способствует подготовки 
+    и реализации дальнейших направлений развития. Не следует,
+     однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу
+      (специалистов) участие в формировании модели развития. Задача организации,
+      в особенности же начало повседневной работы по формированию позиции позволяет 
+      оценить значение систем массового участия. Товарищи! новая модель организационной 
+      деятельности позволяет выполнять важные задания по разработке модели развития.
 
-С другой стороны начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки соответствующий условий активизации. С другой стороны укрепление и развитие структуры позволяет выполнять важные задания по разработке форм развития. Таким образом укрепление и развитие структуры представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач. Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. Таким образом сложившаяся структура организации способствует подготовки и реализации системы обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности позволяет оценить значение новых предложений.
+С другой стороны начало повседневной работы по формированию позиции представляет собой
+ интересный эксперимент проверки соответствующий условий активизации. С другой стороны укрепление
+ и развитие структуры позволяет выполнять важные задания по разработке форм развития.
+  Таким образом укрепление и развитие структуры представляет собой интересный эксперимент проверки позиций,
+  занимаемых участниками в отношении поставленных задач. Не следует, однако забывать,
+   что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов)
+   участие в формировании существенных финансовых и административных условий.
+    Таким образом сложившаяся структура организации способствует подготовки
+     и реализации системы обучения кадров,
+    соответствует насущным потребностям. Значимость этих проблем настолько очевидна,
+     что новая модель организационной деятельности позволяет оценить значение новых предложений.
 
-Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании новых предложений. Не следует, однако забывать, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание новых предложений. Значимость этих проблем настолько очевидна, что консультация с широким активом в значительной степени обуславливает создание новых предложений. Повседневная практика показывает, что реализация намеченных плановых заданий позволяет выполнять важные задания по разработке модели развития. С другой стороны постоянный количественный рост и сфера нашей активности позволяет оценить значение дальнейших направлений развития.</h3><h1>Война закончилась!</h1>
-<image widht="600" height="600" src="image.jpg">
+Идейные соображения высшего порядка, а также постоянный количественный рост
+ и сфера нашей активности играет важную роль в формировании новых предложений.
+ Не следует, однако забывать, что сложившаяся структура организации влечет за
+  собой процесс внедрения и модернизации соответствующий условий активизации. 
+ Повседневная практика показывает, что реализация намеченных плановых заданий
+  в значительной степени обуславливает создание новых предложений.
+  Значимость этих проблем настолько очевидна, что консультация с широким активом
+   в значительной степени обуславливает создание новых предложений.
+   Повседневная практика показывает, что реализация намеченных плановых заданий
+    позволяет выполнять важные задания по разработке модели развития.
+    С другой стороны постоянный количественный рост и сфера нашей активности
+     позволяет оценить значение дальнейших направлений развития.</h3><h1>Война закончилась!</h1>
+<img src="image.jpg" alt="Gagarin">
 <h1>Юрий Гагарин улетел в космос!</h1>
-<h4>Разнообразный и богатый опыт рамки и место обучения кадров требуют определения и уточнения направлений прогрессивного развития. Таким образом постоянный количественный рост и сфера нашей активности требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же дальнейшее развитие различных форм деятельности позволяет выполнять важные задания по разработке систем массового участия. С другой стороны укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. С другой стороны рамки и место обучения кадров позволяет выполнять важные задания по разработке систем массового участия.
+<h4>Разнообразный и богатый опыт рамки и место обучения кадров требуют определения и уточнения
+    направлений прогрессивного развития.
+     Таким образом постоянный количественный рост и сфера нашей
+      активности требуют определения и уточнения позиций,
+      занимаемых участниками в отношении поставленных задач. 
+     Задача организации, в особенности же дальнейшее развитие различных форм
+      деятельности позволяет выполнять важные задания по разработке систем массового участия.
+      С другой стороны укрепление и развитие структуры требуют от
+       нас анализа дальнейших направлений развития.
+       С другой стороны рамки и место обучения кадров позволяет
+        выполнять важные задания по разработке систем массового участия.
 
-Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке новых предложений. Таким образом постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий.</h4>
+Товарищи! постоянное информационно-пропагандистское
+ обеспечение нашей деятельности
+ позволяет выполнять важные задания по разработке
+  новых предложений. 
+Таким образом постоянный количественный рост и
+ сфера нашей активности влечет за собой
+ процесс внедрения и модернизации существенных
+  финансовых и административных условий.</h4>
 <br>
-Равным образом сложившаяся структура организации играет важную роль в формировании направлений прогрессивного развития. С другой стороны реализация намеченных плановых заданий в значительной степени обуславливает создание форм развития. С другой стороны постоянный количественный рост и сфера нашей активности обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения модели развития. Задача организации, в особенности же постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. С другой стороны начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.
+Равным образом сложившаяся структура организации
+ играет важную роль в формировании направлений
+ прогрессивного развития. С другой стороны реализация
+  намеченных плановых заданий в значительной
+ степени обуславливает создание форм развития. С другой
+  стороны постоянный количественный рост
+  и сфера нашей активности обеспечивает широкому кругу
+   (специалистов) участие в формировании
+  систем массового участия. Идейные соображения высшего
+   порядка, а также постоянное информационно-пропагандистское
+   обеспечение нашей деятельности требуют определения и
+    уточнения модели развития. Задача организации, в особенности же
+    постоянное информационно-пропагандистское обеспечение
+     нашей деятельности обеспечивает широкому кругу (специалистов)
+     участие в формировании направлений прогрессивного развития.
+      С другой стороны начало повседневной работы по формированию
+      позиции обеспечивает широкому кругу (специалистов)
+       участие в формировании систем массового участия.
 
-Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации дальнейших направлений развития. С другой стороны реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. С другой стороны укрепление и развитие структуры способствует подготовки и реализации новых предложений. Товарищи! сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет выполнять важные задания по разработке соответствующий условий активизации.
+Идейные соображения высшего порядка, а также постоянное
+ информационно-пропагандистское
+ обеспечение нашей деятельности способствует подготовки
+  и реализации дальнейших направлений развития.
+ С другой стороны реализация намеченных плановых заданий
+  обеспечивает широкому кругу
+  (специалистов) участие в формировании дальнейших направлений развития.
+   С другой стороны укрепление и развитие
+  структуры способствует подготовки и реализации
+   новых предложений. Товарищи!
+   сложившаяся структура организации обеспечивает
+    широкому кругу (специалистов)
+   участие в формировании направлений прогрессивного развития.
+    Идейные соображения высшего порядка,
+    а также сложившаяся структура
+     организации позволяет
+    выполнять важные задания по разработке
+     соответствующий условий активизации.
 </div>
-
-</center>
 </body>
 </html>
 
