--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>ТИПА КРУТАЯ ГАЗЕТА</h1><br><br>
 <div>
-<img src="image2.jpg" alt="Stalin">
+<img src="image2.jpg" class="image2" alt="Stalin">
 <h1>Типа заголовок</h1>
 <h3>Не следует, однако забывать, что консультация с широким активом способствует подготовки 
     и реализации дальнейших направлений развития. Не следует,
@@ -42,7 +42,7 @@
     позволяет выполнять важные задания по разработке модели развития.
     С другой стороны постоянный количественный рост и сфера нашей активности
      позволяет оценить значение дальнейших направлений развития.</h3><h1>Война закончилась!</h1>
-<img src="image.jpg" alt="Gagarin">
+<img src="image.jpg" class="image" alt="Gagarin">
 <h1>Юрий Гагарин улетел в космос!</h1>
 <h4>Разнообразный и богатый опыт рамки и место обучения кадров требуют определения и уточнения
     направлений прогрессивного развития.
@@ -105,4 +105,6 @@
 </div>
 </body>
 </html>
+
+
 
